<resources>
    <string name="app_name">Train Inspector</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Inspector login</string>
    <string name="label_username">Employee email</string>
    <string name="label_password">Password</string>
    <string name="login">Login</string>
    <string name="authentication_label">Authentication required</string>
    <string name="download_trip">Download Trip</string>
    <string name="title_activity_pick_time">PickTimeActivity</string>
    <string name="date">Date</string>
    <string name="scan">Scan</string>
    <string name="upload">Upload</string>
    <string name="total_tickets">Total Tickets</string>
    <string name="validated_tickets">Validated Tickets</string>
    <string name="label_route_distance">Distance</string>
    <string name="label_route_price">Price</string>
    <string name="total_uploaded_routes">Total Uploaded Routes</string>
    <string name="average_tickets_per_route">Average Tickets per Route</string>
    <string name="fraudulent_tickets">Fraudulent Tickets</string>
    <string name="no_shows">No Shows</string>
</resources>
